--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
@@ -27,6 +28,8 @@ android {
     }
 }
 
+
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -37,5 +40,10 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'commons-io:commons-io:+'
+    compile 'com.google.dagger:dagger:2.2'
+//    compile 'com.google.dagger:dagger-android:2.2'
+//    compile 'com.google.dagger:dagger-android-support:2.2' // if you use the support libraries
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.2'
+    //annotationProcessor 'com.google.dagger:dagger-android-processor:2.2'
     testCompile 'junit:junit:4.12'
 }
